--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,8 @@ pandas==2.2.1
 pillow==11.3.0
 platformdirs==4.3.8
 pooch==1.8.2
+praw==7.8.1
+prawcore==2.4.0
 propcache==0.3.2
 protobuf==6.31.1
 pyarrow==20.0.0
@@ -81,8 +83,6 @@ pyyaml==6.0.2
 rdflib==7.1.4
 referencing==0.36.2
 requests==2.32.3
-numpy==1.26.4
-pandas==2.2.1 
 requests-toolbelt==1.0.0
 rpds-py==0.26.0
 scikit-learn==1.7.0
@@ -108,8 +108,10 @@ typing-extensions==4.12.2
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 tzdata==2025.2
+update-checker==0.18.0
 urllib3==2.5.0
 watchdog==6.0.0
+websocket-client==1.8.0
 xxhash==3.5.0
 yarl==1.20.1
 zstandard==0.23.0
